crates/toml/tests/snapshots/invalid/encoding/bom-not-at-start-01.stderr
TOML parse error at line 2, column 3
  |
2 | a=﻿1
  |   ^^^^
string values must be quoted, expected literal string
